# red-siren

./: .gitignore  Cargo.toml  Crux.toml  Dockerfile  README.md  env-Dockerfile  heroku.yml  rust-toolchain.toml  rustc-ice-2024-03-19T09_06_54-14189.txt  rustc-ice-2024-03-19T09_06_57-14191.txt  rustc-ice-2024-03-19T09_06_57-14193.txt  rustc-ice-2024-03-19T09_25_28-14256.txt  rustc-ice-2024-03-19T09_26_11-14320.txt  rustc-ice-2024-03-19T09_26_11-14321.txt  rustc-ice-2024-03-19T09_26_11-14323.txt  rustc-ice-2024-03-19T09_26_15-14328.txt  rustc-ice-2024-03-19T09_26_28-14356.txt  rustc-ice-2024-03-19T09_26_28-14357.txt  rustc-ice-2024-03-19T09_26_28-14359.txt  rustc-ice-2024-03-19T09_26_31-14360.txt  rustc-ice-2024-03-19T09_35_41-15178.txt  rustc-ice-2024-03-19T09_38_16-15262.txt  rustc-ice-2024-03-19T09_44_02-16279.txt  rustc-ice-2024-03-19T09_47_51-21437.txt  rustc-ice-2024-03-19T09_49_04-21615.txt  rustc-ice-2024-03-19T09_50_04-21714.txt
Android/: build.gradle  (+1 more)
Android/shared/aaucore/: Cargo.toml  build.rs  uniffi.toml
Android/shared/aaucore/src/: aau.rs  aaucore.udl  lib.rs
app_core/: Cargo.toml  build.rs  uniffi.toml
app_core/app_core.xcodeproj/: project.pbxproj
app_core/src/: app.rs  app_core.udl  core.udl  lib.rs
app_core/src/app/: animate.rs  config.rs  instrument.rs  layout.rs  model.rs  objects.rs  paint.rs  permissions.rs  play.rs  tuner.rs  visual.rs
app_core/src/app/instrument/: string.rs
app_core/src/app/tuner/: chart.rs
app_core/src/geometry/: rect.rs
au/: Cargo.toml  Info.plist  build.rs
au/AU.xcodeproj/: project.pbxproj
au/UnitExtension/: README.md
au/UnitExtension/Common/: UnitExtension-Bridging-Header.h
au/UnitExtension/Common/Audio Unit/: UnitExtensionAudioUnit.h  UnitExtensionAudioUnit.mm
au/UnitExtension/Common/AudioUnitFactory/: AudioUnitFactory.swift
au/UnitExtension/DSP/: UnitExtensionDSPKernel.hpp
au/UnitExtension/Parameters/: Parameters.swift  UnitExtensionParameterAddresses.h
au/src/: lib.cc  lib.rs
au/unitExtension/: Info.plist  README.md
au/unitExtension/Common/: unitExtension-Bridging-Header.h
au/unitExtension/Common/Audio Unit/: unitExtensionAudioUnit.h  unitExtensionAudioUnit.mm
au/unitExtension/Common/AudioUnitFactory/: AudioUnitFactory.swift
au/unitExtension/Common/DSP/: unitExtensionAUProcessHelper.hpp  unitExtensionBufferedAudioBus.hpp
au/unitExtension/Common/Parameters/: ParameterSpecBase.swift
au/unitExtension/Common/Utility/: CrossPlatform.swift  String+Utils.swift
au/unitExtension/DSP/: unitExtensionDSPKernel.hpp
au/unitExtension/Parameters/: Parameters.swift  unitExtensionParameterAddresses.h
au_core/: Cargo.toml  package-lock.json  package.json  tsconfig.json  vite.config.mts  vite.config.ts
au_core/examples/: multiple-nodes.rs  single-node.rs
au_core/patches/: fastestsmallesttextencoderdecoder+1.0.22.patch
au_core/src/: buf.rs  init_android_ctx.rs  lib.rs  node.rs  system.rs  unit.rs  worklet.rs  worklet.ts
au_core/src/system/: backend.rs  node.rs
au_core/src/unit/: callback.rs  model.rs  resolve.rs  streams.rs
aucore/: Cargo.toml  build.rs  uniffi.toml
aucore/AUCore.xcodeproj/: project.pbxproj
aucore/UnitExtension/: Info.plist
aucore/UnitExtension/Common/: UnitExtension-Bridging-Header.h
aucore/UnitExtension/Common/Audio Unit/: ChannelRS.h  ChannelRS.m  UnitExtensionAudioUnit.h  UnitExtensionAudioUnit.mm
aucore/UnitExtension/Common/AudioUnitFactory/: AudioUnitFactory.swift
aucore/UnitExtension/Common/DSP/: UnitExtensionAUProcessHelper.hpp
aucore/UnitExtension/DSP/: UnitExtensionDSPKernel.hpp
aucore/aucore.xcodeproj/: project.pbxproj
aucore/src/: app.rs  aucore.udl  capture.rs  instance.rs  lib.rs  resolve.rs  streamer.rs  system.rs
aucore/src/streamer/: android_oboe.rs  ios_coreaudio.rs
bridge/: Cargo.toml  build.rs  uniffi.toml
bridge/src/: bridge.rs  bridge.udl  init_android_ctx.rs  lib.rs
bridge/src/bridge/: app.rs  au.rs  shell.rs
shared/: Cargo.toml  build.rs
shared/shared.xcodeproj/: project.pbxproj
shared/shared.xcodeproj/xcuserdata/anvlkv.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/src/: app.rs  instance.rs  lib.rs  shared.udl
shared/src/app/: animate.rs  instrument.rs  intro.rs  navigate.rs  play.rs  tuner.rs
shared/src/app/instrument/: __system.rs  config.rs  keyboard.rs  layout.rs  node.rs  play.rs  string.rs  system.rs
shared/src/app/instrument/snapshots/: shared__app__instrument__config__tests__config_snapshot_by_rand_screen.snap  shared__app__instrument__config__tests__size: 0.snap  shared__app__instrument__config__tests__size: 1.snap  shared__app__instrument__config__tests__size: 10.snap  shared__app__instrument__config__tests__size: 11.snap  shared__app__instrument__config__tests__size: 12.snap  shared__app__instrument__config__tests__size: 13.snap  shared__app__instrument__config__tests__size: 14.snap  shared__app__instrument__config__tests__size: 15.snap  shared__app__instrument__config__tests__size: 16.snap  shared__app__instrument__config__tests__size: 17.snap  shared__app__instrument__config__tests__size: 18.snap  shared__app__instrument__config__tests__size: 19.snap  shared__app__instrument__config__tests__size: 2.snap  shared__app__instrument__config__tests__size: 20.snap  shared__app__instrument__config__tests__size: 21.snap  shared__app__instrument__config__tests__size: 22.snap  shared__app__instrument__config__tests__size: 23.snap  shared__app__instrument__config__tests__size: 24.snap  shared__app__instrument__config__tests__size: 25.snap  shared__app__instrument__config__tests__size: 26.snap  shared__app__instrument__config__tests__size: 27.snap  shared__app__instrument__config__tests__size: 28.snap  shared__app__instrument__config__tests__size: 29.snap  shared__app__instrument__config__tests__size: 3.snap  shared__app__instrument__config__tests__size: 4.snap  (+5 more)
shared/src/app/intro/: animation.rs
shared/src/app/tuner/: chart.rs
shared/src/geometry/: line.rs  rect.rs
shared/src/util/: select.rs
shared/tests/: layout.rs
shared/tests/snapshots/: layout__creates_layout_from_config.snap
(+98 files in other folders)
