[workspace]
members = ["app_core", "au_core", "typegen", "web-leptos"]
resolver = "1"

[workspace.package]
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
repository = "https://github.com/anvlkv/red-siren"
edition = "2021"
version = "0.1.0"
license = "CC0 1.0 Universal"
rust-version = "1.67"
keywords = ["music", "game"]

[workspace.dependencies]
anyhow = "1.0.75"
serde = "1.0.189"
log = "0.4.20"
mint = "0.5.9"
wasm-bindgen = "0.2.92"
uniffi = "0.26.1"
crux_core = "0.7.3"
crux_http = "0.8"
crux_kv = "0.1"
crux_macros = "0.3"
crux_platform = "0.1"
crux_time = "0.3"


insta = { version = "1.34.0", features = ["yaml"] }
lazy_static = "1.4.0"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }
