[package]
name = "app_core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]
name = "app_core"

[features]
typegen = ["crux_core/typegen", "shared/typegen"]

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
crux_core = { workspace = true }
crux_http = { workspace = true }
crux_kv = { workspace = true }
crux_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = "2.3.1"
log = { workspace = true }
keyframe = "1.1.1"
keyframe_derive = "1.0.0"
mint = { workspace = true, features = ["serde"] }
num-integer = "0.1.45"
hecs = { version = "0.10.3", features = ["serde", "macros"] }
futures = "0.3.29"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
logging_timer = "1.1.0"
euclid = { vesrion = "0.22.9", features = [
    "mint",
    "serde",
    "std",
], version = "0.22.9" }
ecolor = { version = "0.26.2", features = ["color-hex", "serde"] }
derive_builder = "0.20.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
shared = { path = "../shared" }

[dev-dependencies]
assert_let_bind = "0.1.1"
insta = { workspace = true }
