[package]
name = "au"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
shared={path="../shared", features = ["worklet"]}
cxx = "1.0"

[features]
ios=["shared/ios"]