[package]
name = "au_core"
authors.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-analyzer = "1.5.0"
cpal = "0.15.2"
fundsp = { version = "0.16.0", default-features = false }
futures = { version = "0.3.29", features = ["executor", "thread-pool"] }
hecs = { version = "0.10.3", features = ["serde", "macros"] }
log = { workspace = true }
anyhow = "1.0.79"
logging_timer = "1.1.0"
ringbuf = "0.3.3"

[dev-dependencies]
eframe = "0.25.0"
dasp_sample = "0.11.0"
simple_logger = "4.1.0"

[[example]]
name = "node"
path = "examples/single-node.rs"

[[example]]
name = "multiple-nodes"
path = "examples/multiple-nodes.rs"
