[package]
name = "aucore"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "aucore"

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
crux_core.workspace = true
crux_http.workspace = true
crux_kv.workspace = true
crux_macros.workspace = true
crux_platform.workspace = true
crux_time.workspace = true
derive_more = "0.99.17"
lazy_static = "1.4.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
uniffi = "0.25.0"
url = "2.4.1"
wasm-bindgen = { workspace = true }
# project
shared = { path = "../shared", features = ["worklet"] }
fundsp = { version = "0.15.0", default-features = false }
# platforms
log = { workspace = true }
android_logger = { version = "0.13.3", optional = true }
oslog = { version = "0.2.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1", optional = true }

[features]
browser = ["shared/browser", "console_error_panic_hook", "console_log"]
ios = ["shared/ios"]
android = ["shared/android"]
typegen = ["shared/typegen"]

[dev-dependencies]
assert_let_bind = "0.1.1"
insta = { workspace = true }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.25.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
