[package]
name = "aaucore"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "aaucore"

[[bin]]
name = "uniffi-bindgen-aau"
path = "src/bin/uniffi-bindgen-aau.rs"

[dependencies]
uniffi = { workspace = true }
aucore = { path = "../../../aucore", features = ["android"] }
android_logger = { version = "0.13.1" }
log = { workspace = true }
oboe = { version = "0.5.0", optional = true }


[features]
ndk = ["oboe"]


[target.uniffi-bindgen-aau.dependencies]
uniffi = { workspace = true, features = ["cli"] }
[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
