[package]
name = "aaucore"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "aaucore"

[[bin]]
name = "uniffi-bindgen-aau"
path = "src/bin/uniffi-bindgen-aau.rs"

[dependencies]
anyhow = { workspace = true }
uniffi = { workspace = true }
aucore = { path = "../../../aucore", features = ["android"] }
shared = { path = "../../../shared", features = ["android", "worklet"] }
android_logger = { version = "0.13.1" }
log = { workspace = true }
oboe = { version = "0.5.0", optional = true, features = ["shared-link"] }
lazy_static = "1.4.0"
cfg-if = "1.0.0"
uuid = { version = "1.6.1", features = ["v4"] }
futures = { version = "0.3.29", features = ["executor", "thread-pool"] }
bincode = { version = "1.3.3" }


[features]
ndk = ["oboe"]


[target.uniffi-bindgen-aau.dependencies]
uniffi = { workspace = true, features = ["cli"] }
[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
